add initial pages ci/cd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
     - deploy
 
 pages:
-  image: docker pull ghcr.io/cirruslabs/flutter:3.24.2
+  image: ghcr.io/cirruslabs/flutter:3.24.2
   stage: deploy
   before_script:
     - cd assignment_01
