--- a/testapp01/pubspec.yaml
+++ b/testapp01/pubspec.yaml
@@ -62,6 +62,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/kibby.jpg
+    - assets/images/meowmeow.jpg
+    - assets/images/partypants.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
