--- a/testapp01/pubspec.yaml
+++ b/testapp01/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   sqflite: ^2.3.3+1
   firebase_core: ^3.6.0
   cloud_firestore: ^5.4.4
+  image_picker: ^1.1.2
+  firebase_storage: ^12.3.3
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
