--- a/spoolscout/pubspec.yaml
+++ b/spoolscout/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.1.2
   image_picker: ^1.1.2
   google_sign_in: ^5.4.2
+  url_launcher: ^6.1.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
