--- a/spoolscout/pubspec.yaml
+++ b/spoolscout/pubspec.yaml
@@ -31,6 +31,7 @@ flutter:
     - assets/images/wallpaper.png
     - assets/images/logo.png
     - assets/images/google-icon.png
+    - assets/images/default_avatar.png
   fonts:
     - family: ChickenWonder
       fonts:
